--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="th">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>สบู่สมุนไพรธรรมชาติ</title>
+  <style>
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    img { max-width: 300px; margin: 10px; }
+    .logo { width: 150px; }
+  </style>
+</head>
 <body>
+  <img src="logo.png" alt="โลโก้แบรนด์" class="logo">
+  <h1>สบู่สมุนไพรธรรมชาติ</h1>
+  <p>สบู่ทำจากวัตถุดิบธรรมชาติ 100% ช่วยให้ผิวสะอาดและชุ่มชื้น</p>
 
-<h1>Your Name Here</h1>
+  <h2>คุณสมบัติ</h2>
+  <ul>
+    <li>ไม่มีสารเคมี</li>
+    <li>เหมาะสำหรับทุกสภาพผิว</li>
+    <li>กลิ่นหอมผ่อนคลายจากน้ำมันหอมระเหย</li>
+  </ul>
 
-<h2> Your student code here</h2>
-
+  <h2>ตัวอย่างสินค้า</h2>
+  <img src="soap1.jpg" alt="สบู่ภาพที่ 1">
+  <img src="soap2.jpg" alt="สบู่ภาพที่ 2">
 </body>
-
 </html>
