--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <img src="logo.png" alt="โลโก้แบรนด์" class="logo">
+  <img src="logo.jpg" alt="โลโก้แบรนด์" class="logo">
   <h1>สบู่สมุนไพรธรรมชาติ</h1>
   <p>สบู่ทำจากวัตถุดิบธรรมชาติ 100% ช่วยให้ผิวสะอาดและชุ่มชื้น</p>
 
@@ -23,7 +23,7 @@
   </ul>
 
   <h2>ตัวอย่างสินค้า</h2>
-  <img src="soap1.jpg" alt="สบู่ภาพที่ 1">
-  <img src="soap2.jpg" alt="สบู่ภาพที่ 2">
+  <img src="Herb.jpg" alt="สบู่ภาพที่ 1">
+  <img src="Herb 1.jpg" alt="สบู่ภาพที่ 2">
 </body>
 </html>
