--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <img src="logo.jpg" alt="โลโก้แบรนด์" class="logo">
+  <img src="Logo.jpg" alt="โลโก้แบรนด์" class="logo">
   <h1>สบู่สมุนไพรธรรมชาติ</h1>
   <p>สบู่ทำจากวัตถุดิบธรรมชาติ 100% ช่วยให้ผิวสะอาดและชุ่มชื้น</p>
 
