--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </ul>
 
   <h2>ตัวอย่างสินค้า</h2>
-  <img src="Herb.jpg" alt="สบู่ภาพที่ 1">
+  <img src="Herb2.jpg" alt="สบู่ภาพที่ 1">
   <img src="Herb 1.jpg" alt="สบู่ภาพที่ 2">
 </body>
 </html>
